Refactored:Program to Transform Each Element to double and Store the result into new List Using Stream.collect